--- a/api_docs/Evira.yaml
+++ b/api_docs/Evira.yaml
@@ -5,7 +5,7 @@ info:
   description: Evira E-commerce APIs with Swagger
   contact: { email: talaviyasanket01@gmail.com }
 servers:
-  - url: https://evira.onrender.com/api/v1
+  - url: http://65.0.143.176/api/v1
   - url: http://localhost:8000/api/v1
 components:
   securitySchemes:
